--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<a href="/asteroids_game" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Asteroids</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
