Add capstone screenshot.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<figure class="image fit thumb">
-									<a href="http://city-streets.herokuapp.com/" class="live" target="_blank"></a>
-										<img src="images/thumbs/01.jpg" alt="" />
+									<a href="http://city-streets.herokuapp.com/" class="live"></a>
+										<img src="images/capstone_screenshot.png" alt="" />
 								</figure>
 								<h3>City Streets</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
