--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 				<h1><strong>William Liang</strong>
 				<br>
 				Software&nbsp;Developer&nbsp;in&nbsp;New&nbsp;York<br>
-				crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 			</header>
 
 		<!-- Main -->
@@ -40,14 +39,31 @@
 						</ul>
 					</section>
 
+					<section id="skills">
+						<h2>Skills</h2>
+							<ul class="skills-list group">
+								<li><img src="images/thumbs/ruby.jpeg"/><h3>Ruby</h3></li>
+								<li><img src="images/thumbs/rails.png"/><h3>Rails</h3></li>
+								<li><img src="images/thumbs/javascript.png"/><h3>Javascript</h3></li>
+								<li><img src="images/thumbs/jquery.jpeg"/><h3>Javascript</h3></li>
+								<li><img src="images/thumbs/react.png"/><h3>React</h3></li>
+								<li><img src="images/thumbs/postgresql.png"/><h3>PostgreSQL</h3></li>
+								<li><img src="images/thumbs/aws.jpg"/><h3>AWS</h3></li>
+								<li><img src="images/thumbs/HTML5.png"/><h3>HTML5</h3></li>
+								<li><img src="images/thumbs/css.png"/><h3>CSS3</h3></li>
+								<li><img src="images/thumbs/git.png"/><h3>Git<h3/></li>
+							</ul>
+					</section>
+
 				<!-- Two -->
 					<section id="recent-projects">
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<figure class="image fit thumb">
-									<a href="http://city-streets.herokuapp.com/" class="live"></a>
-										<img src="images/capstone_screenshot.png" alt="" />
+									<a href="http://city-streets.herokuapp.com/" class="image fit thumb">
+									<!-- <a href="http://city-streets.herokuapp.com/" class="live"></a> -->
+										<img src="images/capstone_screenshot.png" alt="" /></a>
 								</figure>
 								<h3>City Streets</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -68,24 +84,11 @@
 						<h2>Contact Information</h2>
 						<p>If you have an awesome team that is passionate about building great software looking for a developer with the same drive, please do not hesitate to reach out to me.</p>
 						<div class="row">
-							<!-- <div class="8u 12u$(small)">
-								<form method="post" action="#">
-									<div class="row uniform 50%">
-										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div> -->
 							<div class="4u$ 12u$(small)">
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
+										Fresh Meadows, NY 11365<br />
 										United States
 									</li>
 									<li>
