--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>William Liang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -31,7 +31,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I fell in love with programming after writing a P&L template for the Radiation Oncology department. Lately I specialize in web design using Ruby on Rails, JavaScript and responsive HTML/CSS but I also have a passion for hardware. Outside of programming I also enjoy trading biotech stocks, building computers and arduino boards, hiking in national parks, and immersing myself in theoretical physics books by Michio Kaku.</p>
 						<ul class="actions">
 							<li><a href="#recent-projects" class="button">Recent Projects</a></li>
 							<li><a href="#contact-information" class="button">Contact Information</a></li>
@@ -450,7 +450,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</ul>
 				<ul class="copyright">
 					<li>© William Liang.&nbsp; All Rights Reserved.</li>
-					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
 
