Add video to projects.

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="/asteroids_game" class="image fit thumb"><img src="images/game_screenshot.png" alt="" /></a>
-								<h3>Asteroids</h3>
+								<a href="/asteroids_game" class="image fit thumb">
+									<video src="images/gameplay.mov" autoplay loop></video>
+									</a>
+								<h3>Space Wars</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 						</div>
