Change projcect name.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								<a href="/asteroids_game" class="image fit thumb">
 									<video src="images/gameplay.mov" autoplay loop></video>
 									</a>
-								<h3>Space Wars</h3>
+								<h3>Kobayashi Maru</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 						</div>
