--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
 										<img src="images/capstone_screenshot.png" alt="" /></a>
 								</figure>
 								<h3>City Streets</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Easy to use and intuitive real estate website providing instant feedback</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="/asteroids_game" class="image fit thumb">
 									<video src="images/gameplay.mov" autoplay loop></video>
 									</a>
 								<h3>Kobayashi Maru (Asteroids)</h3>
-								
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+
+								<p>A modern take on asteroids with upgradable ships, explosions, and custom AI ships.</p>
 							</article>
 						</div>
 						<!-- <ul class="actions">
