Update project description.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										<img src="images/capstone_screenshot.png" alt="" /></a>
 								</figure>
 								<h3>City Streets</h3>
-								<p>Easy to use and intuitive real estate website providing instant feedback</p>
+								<p>Easy to use and intuitive real estate website providing instant user feedback</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="/asteroids_game" class="image fit thumb">
