--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 							<ul class="skills-list group">
 								<li><img src="images/thumbs/ruby.jpeg"/><h3>Ruby</h3></li>
 								<li><img src="images/thumbs/rails.png"/><h3>Rails</h3></li>
-								<li><img src="images/thumbs/javascript.png"/><h3>Javascript</h3></li>
-								<li><img src="images/thumbs/jquery.jpeg"/><h3>Javascript</h3></li>
+								<li><img src="images/thumbs/javascript.png"/><h3>JavaScript</h3></li>
+								<li><img src="images/thumbs/jquery.jpeg"/><h3>jQuery</h3></li>
 								<li><img src="images/thumbs/react.png"/><h3>React</h3></li>
 								<li><img src="images/thumbs/postgresql.png"/><h3>PostgreSQL</h3></li>
 								<li><img src="images/thumbs/aws.jpg"/><h3>AWS</h3></li>
@@ -66,7 +66,7 @@
 										<img src="images/capstone_screenshot.png" alt="" /></a>
 								</figure>
 								<h3>City Streets</h3>
-								<p>Easy to use and intuitive real estate website providing instant user feedback</p>
+								<p>Easy to use and intuitive real estate website providing effective user feedback.</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="/asteroids_game" class="image fit thumb">
