Update resume links.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<ul class="actions">
 							<li><a href="#recent-projects" class="button">Recent Projects</a></li>
 							<li><a href="#contact-information" class="button">Contact Information</a></li>
-							<li><a href="resume.pdf" class="button">View Resume</a></li>
+							<li><a href="WilliamLiangResume.pdf" class="button">View Resume</a></li>
 						</ul>
 					</section>
 
@@ -116,7 +116,7 @@
 
 									<li>
 										<span class="label"></span>
-										<a href="resume.pdf" download="William_Liang-Web_Developer" class="button">Download Resume</a>
+										<a href="WilliamLiangResume.pdf" download="William_Liang-Web_Developer" class="button">Download Resume</a>
 									</li>
 								</ul>
 							</div>
