--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<figure class="image fit thumb">
-									<a href="http://city-streets.herokuapp.com/" class="image fit thumb">
+									<a href="http://www.citystreets.williamliang.tech/#/?_k=g4sjna" class="image fit thumb">
 										<img src="images/capstone_screenshot.png" alt="" />
 									</a>
 								</figure>
