Add Patient Database project.

--- a/index.html
+++ b/index.html
@@ -72,17 +72,28 @@
 									<video src="images/gameplay.mov" autoplay loop></video>
 								</a>
 								<a class="github" href="https://github.com/WillLiang918/asteroids_game">Github</a>
-								<h3>Kobayashi Maru (Asteroids)</h3>
+								<h3>Kobayashi Maru</h3>
 
-								<p>A modern take on asteroids with upgradable ships, explosions, and custom AI ships.</p>
+								<p>Modern take on asteroids with upgrade features, explosions, and custom AI ships.</p>
 							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<figure class="image fit thumb">
+									<a href="https://github.com/WillLiang918/patient_database" class="image fit thumb">
+										<img src="images/patient_database_screenshot.png" alt="" /></a>
+								</figure>
+									<a class="github" href="https://github.com/WillLiang918/patient_database">Github</a>
+								<h3>Patient Database (Laveral/ Eloquent)</h3>
+								<p>Allow doctors to quickly look up patients</p>
+							</article>
+
 							<article class="6u 12u$(xsmall) work-item">
 								<figure class="image fit thumb">
 									<a href="https://github.com/WillLiang918/activerecord_lite/tree/master/active_record_lite" class="image fit thumb">
 										<img src="images/active_record_screenshot.png" alt="" /></a>
 								</figure>
 									<a class="github" href="https://github.com/WillLiang918/activerecord_lite/tree/master/active_record_lite">Github</a>
-								<h3>ActiveRecord Lite</h3>
+								<h3>ActiveRecord Lite (Rails)</h3>
 								<p>An ORM utilzing metaprogramming to create class associations</p>
 							</article>
 						</div>
