Add Data Visualizer project.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 								<li><img src="images/thumbs/rails.png"/><h3>Rails</h3></li>
 								<li><img src="images/thumbs/javascript.png"/><h3>JavaScript</h3></li>
 								<li><img src="images/thumbs/jquery.jpeg"/><h3>jQuery</h3></li>
+								<li><img src="images/thumbs/d3.jpeg"/><h3>D3</h3></li>
+								<li><img src="images/thumbs/svg.jpeg"/><h3>SVG</h3></li>
 								<li><img src="images/thumbs/react.png"/><h3>React</h3></li>
 								<li><img src="images/thumbs/postgresql.png"/><h3>PostgreSQL</h3></li>
 								<li><img src="images/thumbs/aws.jpg"/><h3>AWS</h3></li>
@@ -75,6 +77,16 @@
 								<h3>Kobayashi Maru</h3>
 
 								<p>Modern take on asteroids with upgrade features, explosions, and custom AI ships.</p>
+							</article>
+
+							<article class="6u 12u$(xsmall) work-item">
+								<figure class="image fit thumb">
+									<a href="/data_visualizer" class="image fit thumb">
+										<img src="images/data_visualizer_screenshot.png" alt="" /></a>
+								</figure>
+								<a class="github" href="https://github.com/WillLiang918/data_visualizer">Github</a>
+								<h3>Data Visualizer (D3/ SVG)</h3>
+								<p>Untap the power of data visualization with your own csv files or use the sample data.</p>
 							</article>
 
 							<article class="6u 12u$(xsmall) work-item">
